# short-creator

./: .env.example  .gitignore  DEVELOPING.md  FEATURES.md  IDEATION.md  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  store.ts
frontend/src/components/: CropCanvas.tsx  PreviewPane.tsx  Sidebar.tsx  Timeline.tsx  TopBar.tsx
frontend/src/pages/: CropEditor.tsx  Export.tsx  Home.tsx  Input.tsx  Recommend.tsx  Style.tsx  Transcript.tsx
src/short_creator/: __init__.py  cli.py  config.py  models.py  project_store.py
src/short_creator/pipeline/: __init__.py  composer.py  downloader.py  probe.py  recommender.py  subtitle_builder.py  transcriber.py
src/short_creator/platform_compat/: __init__.py  ffmpeg_locator.py  gpu.py  proc.py
src/short_creator/server/: __init__.py  app.py  jobs.py  video_response.py
src/short_creator/server/routes/: crop.py  jobs.py  projects.py  recommend.py  render.py  settings.py  style.py  transcription.py
tests/: test_composer.py  test_subtitle_builder.py
