[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "short-creator"
version = "0.1.0"
description = "Turn long YouTube videos into 9:16 shorts with auto subtitles, smart clip recommendations, and a visual crop editor."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yanfa Adi Putra" }]

dependencies = [
    "yt-dlp>=2024.10.7",
    "faster-whisper>=1.0.3",
    "ffmpeg-python>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "click>=8.1.7",
    "python-dotenv>=1.0.1",
    "platformdirs>=4.3.6",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "Pillow>=10.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.scripts]
short = "short_creator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
